--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,9 +93,7 @@ jobs:
                 sed -i "s|^\(  repository: \).*|\1${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }}|" helm/githubactions-charts/values.yaml
                 sed -i "s|^\(  tag: \).*|\1${{ github.run_number }}|" helm/githubactions-charts/values.yaml
 
-                 values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
-
-            - name: Commit and push updated values.yaml
+            - name: Commit and push updated values.yam
               run: |
                 git config user.name "github-actions[bot]"
                 git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -132,15 +130,15 @@ jobs:
     #               --docker-password=$(aws ecr get-login-password)
     #           #run: kubectl create secret docker-registry regcred --docker-server=$${{ secrets.REGISTRY }} --docker-username=AWS --docker-password=$(aws ecr get-login-password)
 
-    #         - name: Deploy Helm
-    #           uses: bitovi/github-actions-deploy-eks-helm@v1.2.8
-    #           with:
-    #             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #             aws-region: ${{ env.AWS_REGION}}
-    #             cluster-name: ${{ env.EKS_CLUSTER }}
-    #             ### config-files: .github/values/dev.yaml
-    #             chart-path: helm/githubactions-charts
-    #             namespace: default
-    #             values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
-    #             name: githubactions-stack
+            - name: Deploy Helm
+              uses: bitovi/github-actions-deploy-eks-helm@v1.2.8
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: ${{ env.AWS_REGION}}
+                cluster-name: ${{ env.EKS_CLUSTER }}
+                ### config-files: .github/values/dev.yaml
+                chart-path: helm/githubactions-charts
+                namespace: default
+                values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
+                name: githubactions-stack
