--- a/helm/githubactions-charts/values.yaml
+++ b/helm/githubactions-charts/values.yaml
@@ -58,6 +58,9 @@ ingress:
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+  secret:
+    username: myuser
+    password: mypass
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
