--- a/helm/githubactions-charts/templates/app-secret.yml
+++ b/helm/githubactions-charts/templates/app-secret.yml
@@ -1,16 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "githubactions-charts.fullname" . }}-app-secret
-  labels:
-    app.kubernetes.io/name: {{ include "githubactions-charts.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/component: app
-  annotations:
-    meta.helm.sh/release-name: {{ .Release.Name }}
-    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
+  name: app-secret
 type: Opaque
 data:
-  username: {{ .Values.secret.username | b64enc }}
-  password: {{ .Values.secret.password | b64enc }}
+  db-pass: dnByb2RicGFzcw== 
+  rmq-pass: Z3Vlc3Q=
