--- a/helm/githubactions-charts/templates/vproapp-service.yml
+++ b/helm/githubactions-charts/templates/vproapp-service.yml
@@ -1,12 +1,24 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: my-app
+# spec:
+#   ports:
+#   - port: 8080
+#     protocol: TCP
+#     targetPort: 8080
+#   selector:
+#     app: my-app
+#   type: ClusterIP 
 apiVersion: v1
 kind: Service
 metadata:
   name: my-app
+  namespace: default
 spec:
-  ports:
-  - port: 8080
-    protocol: TCP
-    targetPort: 8080
-  selector:
-    app: vproapp
   type: ClusterIP
+  ports:
+    - port: 8080
+      targetPort: 8080
+  selector:
+    app: my-app
