--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Checkstyle
               run: mvn checkstyle:checkstyle
 
-            # Setup java 11 to be default(sonar-scanner requirements)
+            # ##Setup java 11 to be default(sonar-scanner requirements)
             - name: Set Java 17
               uses: actions/setup-java@v3
               with:
